# FaceTrail

./: .gitignore  CHANGELOG.md  LICENSE  README.es.md  README.md  pyproject.toml  python_code_for_images  python_code_for_videos
scripts/: build_release.py
src/facetrail/: __init__.py  __main__.py  cli.py  core.py  gui.py
