[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "facetrail"
version = "1.0.0"
description = "Cross-platform face extraction, clustering, reporting, and privacy redaction for image and video libraries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sularhen" }
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.9"
]
keywords = ["opencv", "face-detection", "video", "privacy", "cli"]

[project.scripts]
facetrail = "facetrail.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
